--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -357,7 +357,7 @@ section{padding:60px 0}
     }
     #topbar .social-links a.lang {
       
-       margin-left: 0;
+       margin-right: 30px;
        
     }
     h2.animate__animated.animate__fadeInDown {
